--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libgl1-mesa-glx libglib2.0-0 libsm6 libxext6 libxrender-dev libgomp1
+        sudo apt-get install -y libglib2.0-0 libsm6 libxext6 libxrender-dev libgomp1 libglib2.0-0 libgtk-3-0 libgdk-pixbuf2.0-0
         
     - name: Install Python dependencies
       run: |
