--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -23,11 +23,13 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libglib2.0-0 libsm6 libxext6 libxrender-dev libgomp1 libglib2.0-0 libgtk-3-0 libgdk-pixbuf2.0-0
+        sudo apt-get install -y libglib2.0-0 libsm6 libxext6 libxrender-dev libgomp1 libgtk-3-0 libgdk-pixbuf2.0-0
         
     - name: Install Python dependencies
       run: |
-        pip install requests beautifulsoup4 pillow opencv-python-headless easyocr numpy torch torchvision --index-url https://download.pytorch.org/whl/cpu
+        pip install requests beautifulsoup4 pillow opencv-python-headless numpy
+        pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
+        pip install easyocr
         
     - name: Run scraper
       run: python portScrape.py
