--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,8 +1,10 @@
 name: Scrape Wave Data
 
 on:
+  on:
   schedule:
-     - cron: '*/30 17-9 * * *'  # Roughly 5 AM - 9 PM NZ time
+    - cron: '*/30 17-23 * * *'  # 5 AM - 11:30 AM NZ
+    - cron: '*/30 0-8 * * *'    # 12 PM - 8:30 PM NZ
   workflow_dispatch:  # Allow manual trigger
   push:
     branches: [ main ]  # Run on push for testing
