--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -9,7 +9,7 @@ on:
     branches: [ main ]  # Run on push for testing
 
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
