--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -56,6 +56,6 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add .
+        [ -f wave-scrape-app ] && git add .
         git diff --staged --quiet || git commit -m "Update wave data - $(date)"
         git push
