--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -57,10 +57,10 @@ jobs:
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         
-        # Add the actual files created by the script
-        [ -f wave-scrape-app/data/wave_data.json ] && git add wave_data.json
-        [ -f wave-scrape-app/data/index.html ] && git add index.html
-        [ -f wave-scrape-app/data/portDataScrape.txt ] && git add portDataScrape.txt
+        # Add files from the correct new location
+        [ -f wave-scrape-app/data/wave_data.json ] && git add wave-scrape-app/data/wave_data.json
+        [ -f wave-scrape-app/data/index.html ] && git add wave-scrape-app/data/index.html
+        [ -f wave-scrape-app/data/portDataScrape.txt ] && git add wave-scrape-app/data/portDataScrape.txt
         
         # Only commit if there are changes
         git diff --staged --quiet || git commit -m "Update wave data - $(date)"
