--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -16,7 +16,8 @@ permissions:
 jobs:
   scrape:
     runs-on: ubuntu-latest
-    
+    environment:
+      name: github-pages
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
