--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -49,20 +49,12 @@ jobs:
       with:
         path: '.'
         
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v4
-
-    - name: Commit and push changes
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        
-        # Add files from the correct new location
-        [ -f wave-scrape-app/data/wave_data.json ] && git add wave-scrape-app/data/wave_data.json
-        [ -f wave-scrape-app/data/index.html ] && git add wave-scrape-app/data/index.html
-        [ -f wave-scrape-app/data/portDataScrape.txt ] && git add wave-scrape-app/data/portDataScrape.txt
-        
-        # Only commit if there are changes
-        git diff --staged --quiet || git commit -m "Update wave data - $(date)"
-        git push
+  deploy:
+      runs-on: ubuntu-latest
+      needs: scrape
+      environment:
+        name: github-pages
+      steps:
+        - name: Deploy to GitHub Pages
+          id: deployment
+          uses: actions/deploy-pages@v4
